@@ -34,6 +34,10 @@
       <default>false</default>
       <summary>Initialize the earmarks with the possible values for each cell</summary>
     </key>
+    <key name="duplicate-warnings" type="b">
+      <default>true</default>
+      <summary>Check for duplicates in row, column and block</summary>
+    </key>
     <key name="earmark-warnings" type="b">
       <default>false</default>
       <summary>Check earmarks against duplicates in row, column and block</summary>
