@@ -1,3 +1,11 @@
+50.alpha - Devel
+==========================
+
+- Add duplicate warnings preference
+- Rename "Check against solution" preference to "Solution Warnings"
+- Remove warnings and highlighter settings
+- Remove custom game creation
+
 49.0 - September 12, 2025
 ==========================
 
